--- a/content/docs-lite/zh/docs/DataBaseReference/平台和客户端兼容性.md
+++ b/content/docs-lite/zh/docs/DataBaseReference/平台和客户端兼容性.md
@@ -6,7 +6,7 @@
 
 **参数说明**：设置隐式转换优先级，是否优先将字符串转为数字。
 
-该参数属于USERSET类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于USERSET类型参数，请参考[表1](../DatabaseAdministrationGuide/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围：**布尔型
 
@@ -23,7 +23,7 @@
 
 **参数说明**：设置时间戳默认格式。
 
-该参数属于USERSET类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于USERSET类型参数，请参考[表1](../DatabaseAdministrationGuide/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围**：字符串
 
@@ -33,7 +33,7 @@
 
 **参数说明：**搭配函数GROUP\_CONCAT使用，限制其返回值长度，超长截断。
 
-该参数属于USERSET类型参数，请参考表[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于USERSET类型参数，请参考表[表1](../DatabaseAdministrationGuide/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围：**0-9223372036854775807
 
@@ -59,7 +59,7 @@
 -   正确的SQL标准兼容的expr = NULL总是返回NULL（未知）。
 -   Microsoft Access里的过滤表单生成的查询使用expr = NULL来测试空值。打开这个选项，可以使用该接口来访问数据库。
 
-该参数属于USERSET类型参数，请参考[表2](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t290c8f15953843db8d8e53d867cd893d)中对应设置方法进行设置。
+该参数属于USERSET类型参数，请参考[表2](../DatabaseAdministrationGuide/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t290c8f15953843db8d8e53d867cd893d)中对应设置方法进行设置。
 
 **取值范围：**布尔型
 
@@ -76,7 +76,7 @@
 
 **参数说明：**控制是否支持数据库的扩展特性。
 
-该参数属于POSTMASTER类型参数，请参考[表2](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t290c8f15953843db8d8e53d867cd893d)中对应设置方法进行设置。
+该参数属于POSTMASTER类型参数，请参考[表2](../DatabaseAdministrationGuide/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t290c8f15953843db8d8e53d867cd893d)中对应设置方法进行设置。
 
 **取值范围：**布尔型
 
@@ -100,14 +100,14 @@
 
 >![](public_sys-resources/icon-notice.gif) **须知：** 
 >
->-   该参数只能在执行[CREATE DATABASE](create-database.md)命令创建数据库时通过dbcompatibility设置。
+>-   该参数只能在执行[CREATE DATABASE](../SQLReference/create-database.md)命令创建数据库时通过dbcompatibility设置。
 >-   在数据库中，该参数只能是确定的一个值，要么始终设置为A，要么始终设置为B，请勿任意改动，否则会导致数据库行为不一致。
 
 ## b\_format\_behavior\_compat\_options<a name="section533544693812"></a>
 
 **参数说明：**数据库B模式兼容性行为配置项，该参数的值由若干个配置项用逗号隔开构成。
 
-该参数属于USERSET类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于USERSET类型参数，请参考[表1](../DatabaseAdministrationGuide/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围：**字符串
 
@@ -161,7 +161,7 @@
 
 **参数说明：**数据库兼容性行为配置项，该参数的值由若干个配置项用逗号隔开构成。
 
-该参数属于USERSET类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于USERSET类型参数，请参考[表1](../DatabaseAdministrationGuide/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围：**字符串
 
@@ -368,7 +368,7 @@ length
 
 **参数说明**：设置同名的存储过程变量和表的列的使用优先级。
 
-该参数属于USERSET类型参数，仅支持[表2](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t290c8f15953843db8d8e53d867cd893d)中对应设置方法3进行设置。
+该参数属于USERSET类型参数，仅支持[表2](../DatabaseAdministrationGuide/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t290c8f15953843db8d8e53d867cd893d)中对应设置方法3进行设置。
 
 **取值范围**：字符串
 
@@ -387,7 +387,7 @@ length
 >超长字符串自动截断功能不适用于insert语句包含外表的场景。
 >如果向字符集为字节类型编码（SQL\_ASCII、LATIN1等）的数据库中插入多字节字符数据（如汉字等），且字符数据跨越截断位置，这种情况下，按照字节长度自动截断，自动截断后会在尾部产生非预期结果。如果用户有对于截断结果正确性的要求，建议用户采用UTF8等能够按照字符截断的输入字符集作为数据库的编码集。
 
-该参数属于USERSET类型参数，请参考[表2](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t290c8f15953843db8d8e53d867cd893d)中对应设置方法进行设置。
+该参数属于USERSET类型参数，请参考[表2](../DatabaseAdministrationGuide/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t290c8f15953843db8d8e53d867cd893d)中对应设置方法进行设置。
 
 **取值范围：**布尔型
 
@@ -400,7 +400,7 @@ length
 
 **参数说明**：设置列名以大写形式返回给客户端。该参数仅限于ORA兼容模式和集中式环境下使用。
 
-该参数属于USERSET类型参数，请参考[表2](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t290c8f15953843db8d8e53d867cd893d)中对应设置方法进行设置。
+该参数属于USERSET类型参数，请参考[表2](../DatabaseAdministrationGuide/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t290c8f15953843db8d8e53d867cd893d)中对应设置方法进行设置。
 
 **取值范围：**布尔型
 
@@ -413,7 +413,7 @@ length
 
 **参数说明：**控制是否可以使用lastval函数。
 
-该参数属于POSTMASTER类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于POSTMASTER类型参数，请参考[表1](../DatabaseAdministrationGuide/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围：**布尔型
 
