--- a/content/docs-lite/zh/docs/DatabaseAdministrationGuide/用户.md
+++ b/content/docs-lite/zh/docs/DatabaseAdministrationGuide/用户.md
@@ -8,7 +8,7 @@
 
 ## 创建、修改和删除用户<a name="zh-cn_topic_0283136811_zh-cn_topic_0237121102_zh-cn_topic_0155089862_section1157510331121"></a>
 
--   要创建用户，请使用SQL语句[CREATE USER](CREATE-USER.md)。
+-   要创建用户，请使用SQL语句[CREATE USER](../SQLReference/CREATE-USER.md)。
 
     例如：创建用户joe，并设置用户拥有CREATEDB属性。
 
@@ -17,16 +17,16 @@
     CREATE ROLE
     ```
 
--   要创建系统管理员，请使用带有SYSADMIN选项的[CREATE USER](CREATE-USER.md)语句 。
--   要删除现有用户，请使用[DROP USER](DROP-USER.md)。
--   要更改用户帐户（例如，重命名用户或更改密码），请使用[ALTER USER](ALTER-USER.md)。
--   要查看用户列表，请查询视图[PG\_USER](PG_USER.md)：
+-   要创建系统管理员，请使用带有SYSADMIN选项的[CREATE USER](../SQLReference/CREATE-USER.md)语句 。
+-   要删除现有用户，请使用[DROP USER](../SQLReference/DROP-USER.md)。
+-   要更改用户帐户（例如，重命名用户或更改密码），请使用[ALTER USER](../SQLReference/ALTER-USER.md)。
+-   要查看用户列表，请查询视图[PG\_USER](../DataBaseReference/PG_USER.md)：
 
     ```
     openGauss=# SELECT * FROM pg_user; 
     ```
 
--   要查看用户属性，请查询系统表[PG\_AUTHID](PG_AUTHID.md)：
+-   要查看用户属性，请查询系统表[PG\_AUTHID](../DataBaseReference/PG_AUTHID.md)：
 
     ```
     openGauss=# SELECT * FROM pg_authid; 
