--- a/content/docs-lite/zh/docs/Releasenotes/用户须知.md
+++ b/content/docs-lite/zh/docs/Releasenotes/用户须知.md
@@ -2,7 +2,7 @@
 
 openGauss是一款极致性能、安全、可靠的关系型（OLTP）开源数据库。采用协议“木兰宽松许可证”（Mulan PSL V2），用户可以自由复制、使用、修改、分发，不论修改与否。
 
-openGauss版本号采用点分位命名规则（X.Y.Z）模式，其中X表示架构变更版本，Y表示每年发布版本，Z表示补丁版本。正常每年会发布一个Y版本，重大架构或特性变更，发布一个新的X版本。
+openGauss版本号采用点分位命名规则（X.Y.Z）模式，其中X.0.0表示release版本，X.Y.0表示preview版本，Z表示补丁版本。正常每年会发布一个preview版本和一个release版本，preview版本作为尝鲜版，不建议用户商用；release版本作为LTS版本，可以商用。涉及重大问题修复时，会按需发布补丁版本。
 
 openGauss生命周期初步规划为：
 
