--- a/content/zh/docs/InstallationGuide/单节点安装_容器.md
+++ b/content/zh/docs/InstallationGuide/单节点安装_容器.md
@@ -128,14 +128,14 @@ sh buildDockerImage.sh -v 5.0.0 -i
 
 x86_64平台：
 ```
-docker pull swr.cn-south-1.myhuaweicloud.com/opengauss/x86_64/opengauss:latest
-docker tag swr.cn-south-1.myhuaweicloud.com/opengauss/x86_64/opengauss:latest opengauss:latest
+docker pull swr.cn-south-1.myhuaweicloud.com/opengauss/x86_64/opengauss:5.0.0
+docker tag swr.cn-south-1.myhuaweicloud.com/opengauss/x86_64/opengauss:5.0.0 opengauss:5.0.0
 ```
 
 arm平台:
 ```
-docker pull swr.cn-south-1.myhuaweicloud.com/opengauss/arm/opengauss:latest
-docker tag swr.cn-south-1.myhuaweicloud.com/opengauss/arm/opengauss:latest opengauss:latest
+docker pull swr.cn-south-1.myhuaweicloud.com/opengauss/arm/opengauss:5.0.0
+docker tag swr.cn-south-1.myhuaweicloud.com/opengauss/arm/opengauss:5.0.0 opengauss:5.0.0
 ```
 
 ### 启动容器
@@ -174,7 +174,7 @@ systemctl restart docker
 docker network create -d overlay --subnet 10.22.1.0/24  --gateway 10.22.1.1 og-network
 ```
 
-1. 启动多个容器实例
+2. 启动多个容器实例
    
 ```
 # ip需要和容器网络在同一网段，几个实例的ip和节点名称不能重复。如下示例1主2备：
