--- a/content/zh/docs/AboutopenGauss/工具链.md
+++ b/content/zh/docs/AboutopenGauss/工具链.md
@@ -1,6 +1,6 @@
 # 工具链<a name="ZH-CN_TOPIC_0000001220467644"></a>
 
--   **[MySQL一键式迁移gs_rep_portal](MySQL一键式迁移gs_rep_portal.md)**
+-   **[MySQL一键式迁移gs_rep_portal](MySQL一键式迁移工具gs_rep_portal.md)**
 -   **[全量迁移gs_mysync](全量迁移gs_mysync.md)**
 -   **[增量迁移gs_replicate(MySQL -> openGauss)](增量迁移gs_replicate.md)**
 -   **[反向迁移gs_replicate(openGauss -> MySQL)](反向迁移gs_replicate.md)**
