--- a/content/zh/docs/DataBaseReference/系统视图.md
+++ b/content/zh/docs/DataBaseReference/系统视图.md
@@ -78,7 +78,7 @@
 
 -   **[PG\_AVAILABLE\_EXTENSION\_VERSIONS](PG_AVAILABLE_EXTENSION_VERSIONS.md)**  
 
--   **[PG\_AVAILABLE\_EXTENSION](PG_AVAILABLE_EXTENSION.md)**  
+-   **[PG\_AVAILABLE\_EXTENSION](PG_AVAILABLE_EXTENSIONS.md)**  
 
 -   **[PG\_CURSORS](PG_CURSORS.md)**  
 
